# hcm-engine

./: README.md  pyproject.toml
(B) src/hcm_engine/policy/: learned.py
.github/workflows/: tests.yml
api/: service.py
core/: __init__.py  decision.py  impact.py
schemas/: decision.schema.json
src/hcm_engine/api/: service.py
src/hcm_engine/core/: decision.py
src/hcm_engine/policy/: __init__.py
tests/: test_decision.py
