[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hcm-engine"
version = "0.1.0"
description = "Governance-driven containment decision engine for sociotechnical smart home cybersecurity (HCM)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Abdessamad Bourkibate"}]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.0",

  "joblib>=1.3",
  "scikit-learn>=1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0"
]

[project.scripts]
hcm = "hcm_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
ignore = []
src = ["src"]

